SERVER-5069 replace ScopedDBConnection message with something more meaningful