src/mongo/s/shardconnection.cpp
@@ -240,7 +240,7 @@ namespace mongo {
         if ( _conn ) {
             if ( ! _conn->isFailed() ) {
                 /* see done() comments above for why we log this line */
-                log() << "~ScopedDBConnection: _conn != null" << endl;
+                log() << "sharded connection to " << _conn->getServerAddress() << " not being returned to the pool" << endl;
             }
             kill();
         }
